--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["vue"],
+  "keywords": [
+    "vue"
+  ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "regenerator-runtime": "^0.13.5",
+    "vue": "^2.6.11"
+  }
 }
